# customer-support-ai-ddd-refactor

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
data/: faq.jsonl
docs/: ADR.md  BOUNDED_CONTEXTS.md  DEVLOG.md  PROJECT_PHASE_1.md  REFACTURE_PRIORITIES.md  TEMPLATE_COVERAGE.md
docs/decisions/: ADR-001: DDD Refactor with Bounded Contexts.md  ADR-002: Protocol-Based LLM and Embedding Client Abstraction  ADR-002: Protocol-Based LLM and Embedding Client Abstraction.md  ADR-003: RetrieverProtocol with FAISSRetriever and BlobRetriever.md  ADR-004: Direct faiss-cpu over LangChain FAISS Wrapper.md  ADR-005: Hallucination Check Merged into Judge Prompt.md  ADR-006: Split Shared Contracts from Context-Local Result Types.md
src/customer_support/: main.py  pipeline.py
src/customer_support/classification/: classifier.py  models.py  prompts.py
src/customer_support/core/: config.py  exceptions.py  models.py
src/customer_support/generation/: generator.py  models.py  prompts.py
src/customer_support/quality_assurance/: checker.py  judge.py  models.py  prompts.py
src/customer_support/retrieval/: retriever.py  store_builder.py
src/customer_support/services/: client.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_classifier.py  test_fitness_functions.py  test_generator.py  test_protocols.py  test_quality_assurance.py  test_retriever.py
